<resources>
    <string name="app_name">MY READS</string>

    <!-- FRAGMENT TITLES -->
    <string name="title_find_books">Find New Books</string>
    <string name="title_my_collection">My Collection</string>
    <string name="title_not_read">Not Read</string>
    <string name="title_reading">Reading</string>
    <string name="title_have_read">Have Read</string>

    <string name="title_activity_book">Book</string>
    <string name="thumbnail">thumbnail</string>
    <string name="book_icon">book_icon</string>
    <string name="label_title">Title</string>
    <string name="label_author">Author</string>
    <string name="label_search">Search</string>
    <string name="more_info">More Info</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="app_icon">App Icon</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!-- ERROR MESSAGES-->
    <string name="error_find_books_message">You must specify either a title or an author</string>

    <string-array name="book_states">
        <item>Not Read</item>
        <item>Reading</item>
        <item>Have Read</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preview">Preview</string>
    <string name="change_state">Change State</string>
    <string name="remove">Remove</string>
    <string name="title">Title</string>
    <string name="authors">Authors</string>
    <string name="publisher">Publisher</string>
    <string name="published_date">Published Date</string>
    <string name="description">Description</string>
    <string name="preview_title">Preview Title</string>
    <string name="preview_authors">Preview Authors</string>
    <string name="preview_publisher">Preview Publisher</string>
    <string name="preview_date">01/01/2000</string>
    <string name="preview_description">Preview Description</string>
</resources>
