<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_book"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/item_book_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/book_icon"
        app:srcCompat="@drawable/ic_book"
        android:scaleType="fitStart"
        android:foregroundGravity="top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_book_title"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_title"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/item_book_authors"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_authors"
            android:textColor="#54000000"
            android:maxLines="2"
            android:ellipsize="end"/>

    </LinearLayout>

</LinearLayout>